[package]
name = "pscanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
rayon = "1.7.0"
reqwest = { version="0.11.18", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = "1.0.174"
thiserror = "1.0.44"
trust-dns-resolver = "0.22.0"
